# num_opt_proj_3

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: project-overview.mdc  proximinal-residual.mdc  task-1.mdc  task-2.mdc  task-3.mdc  task-4.mdc
docs/: report.tex
results/: README.md
src/: __init__.py
src/algorithms/: __init__.py  active_set_method.py  forward_backward.py  projected_gradient.py
src/experiments/: __init__.py  generate_all_images.py  task2_experiments.py  task3_preconditioning.py  task4_preconditioned_runs.py  test_sine_problem.py  test_task1_algorithms.py  test_task2_experiments.py  test_task2_quick.py
src/problems/: __init__.py  base_problem.py  preconditioned_problem.py  sine_approximation.py
